# TechEurope

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  dev.sh  docker-compose.yml  skills-lock.json
server/: .env.example  pyproject.toml  run_tests.sh
server/migrations/: 001_init.sql  002_trust_view.sql  003_align_schema_with_code.sql  003_source_attribution.sql  004_facts_recorded_at_rename.sql  005_demo_bootstrap.sql  005_trust_view_rebuild.sql  006_facts_valid_from_default.sql  007_update_propagation_fixes.sql  008_inference_refresh.sql  008_source_attribution.sql  008_vfs_unique_path_index.sql  009_conflict_detection.sql  009_graph_construction_paul.sql  009_temporal_state.sql  010_cross_confirmation_view.sql  010_entity_soft_delete.sql  010_source_attribution.sql  011_api_layer.sql  011_autonomous_ontology.sql  011_change_streams.sql  012_seed_primitives.sql
server/scripts/: compare_extractors.py  compare_pioneer_versions.py  convert_to_gliner2.py  convert_to_pioneer_ner.py  eval_extractors.py  gen_pioneer_training.py  pioneer_pipeline.py  smoke_api_layer.py
server/src/server/: __init__.py  cli.py  config.py  db.py  gemini_budget.py  ingestion_models.py  main.py  models.py  trust.py  vfs_paths.py
server/src/server/api/: _pagination.py  admin.py  changes.py  cypher.py  cypher_proxy.py  entities.py  facts.py  graph.py  resolutions.py  search.py  traverse.py  vfs.py  webhooks.py  webhooks_outbound.py
server/src/server/auth/: __init__.py  tokens.py
server/src/server/connectors/: __init__.py  base.py  collaboration.py  crm.py  crm_mock.py  diff.py  document 2.py  document.py  email.py  email_mock.py  hr.py  hr_mock.py  itsm.py  itsm_mock.py  pdf.py  tavily.py
server/src/server/eval/: harness.py  questions.yaml  reporter.py
server/src/server/extractors/: __init__.py  gemini.py  gemini_structured.py  pioneer.py  prompt.py  schemas.py
server/src/server/mcp/: server.py  stdio.py
server/src/server/ontology/: engine.py  (+3 more)
server/tests/: conftest.py  test_api.py  test_api_layer.py  test_connectors.py  test_graph_construction_paul.py  test_models.py  test_neo4j_projection.py  test_ontology.py  test_utils.py  test_ws0_foundation.py  test_ws1_ingestion.py  test_ws2_resolver.py  test_ws3_pioneer.py  test_ws4_query_api.py  test_ws5_neo4j.py  test_ws6_frontend.py  test_ws7_revenue.py  test_ws8_eval_harness.py  test_ws9_integration.py
(+501 files in other folders)
